# peaveil

./: Cargo.toml  LICENSE-CC0  LICENSE-MIT  README.md
.github/workflows/: ci.yml
examples/: discovery_viz.rs  encrypted.rs  simulation_metrics.rs  two_nodes.rs
src/: config.rs  config_bridge.rs  error.rs  events.rs  explorer.rs  lib.rs  node.rs  sample.rs  sim.rs  view.rs
tests/: discovery.rs  encrypted.rs
tests/common/: mod.rs
