[package]
name = "peaveil"
version = "0.1.0"
authors = ["ljedrz <ljedrz@gmail.com>"]
edition = "2024"
description = "A privacy-first peer discovery protocol based on probabilistic peer sampling, gossip, and metadata-resistant discovery."
license = "CC0-1.0 OR MIT"
repository = "https://github.com/ljedrz/peaveil"
homepage = "https://github.com/ljedrz/peaveil"
documentation = "https://docs.rs/peaveil"
readme = "README.md"
categories = ["network-programming", "asynchronous"]
keywords = ["p2p", "discovery", "gossip", "privacy", "pps"]
rust-version = "1.88"

[dependencies]
peashape = "0.2"
pea2pea = "0.56"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
parking_lot = "0.12"
rand = "0.9"
rand_chacha = "0.9"
bytes = "1"
tracing = "0.1"
thiserror = "2"
futures-util = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lib]
name = "peaveil"
path = "src/lib.rs"
